--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  width: 100vh;
+  height: 100vh;
+  background-color: azure;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#root{
+  width: 100vw;
+  
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.square{
+  width: 200px;
+  height: 200px;
+  border: 4px double black;
+  margin: 4px;
+  /* background-color: aqua;
+  color: black;
+  font-size: 100px;
+  border: 4px double black;
+  display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+.div{
+  width: 100vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center; 
+  
 }
 
-.App-link {
-  color: #61dafb;
+.sguareFalse{
+  width: 200px;
+  height: 200px;
+  background-color: aqua;
+  border: 4px double black;
+  margin: 4px;
 }
+img{
+  width: 100%;
+  height: 100%;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
