--- a/src/App.css
+++ b/src/App.css
@@ -10,17 +10,12 @@ body{
   
 }
 .square{
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   border: 4px double black;
   margin: 4px;
-  /* background-color: aqua;
-  color: black;
-  font-size: 100px;
-  border: 4px double black;
-  display: flex;
-  justify-content: center;
-  align-items: center; */
+  border-radius: 10px;
+
 }
 .div{
   width: 100vw;
@@ -35,14 +30,29 @@ body{
 }
 
 .sguareFalse{
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   background-color: aqua;
   border: 4px double black;
   margin: 4px;
+  border-radius: 10px;
 }
 img{
   width: 100%;
   height: 100%;
-
 }
+.menu{
+  width: 200px;
+  height: 200px;
+  background-color: pink;
+  border-radius: 10px ;
+  border: 4px double black;
+  margin: 4px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center; 
+font-size: 30px;
+  
+}
+
