--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,24 @@
 body{
   width: 100vh;
   height: 100vh;
-  background-color: azure;
+  background-color: plum;
   
 }
 #root{
   width: 100vw;
-  
+  height: 100vh;
 }
 .square{
-  width: 150px;
-  height: 150px;
+  width: 170px;
+  height: 170px;
   border: 4px double black;
   margin: 4px;
   border-radius: 10px;
 
 }
 .div{
-  width: 100vw;
-  height: 100vh;
+  width: 98vw;
+  height: 98vh;
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -30,9 +30,8 @@ body{
 }
 
 .sguareFalse{
-  width: 150px;
-  height: 150px;
-  background-color: aqua;
+  width: 170px;
+  height: 170px;
   border: 4px double black;
   margin: 4px;
   border-radius: 10px;
@@ -55,4 +54,8 @@ img{
 font-size: 30px;
   
 }
-
+.rub{
+  background-image: url(/src/Components/img/волна.jpg);
+  width: 100%; 
+  height: 100%;
+}
