--- a/src/App.css
+++ b/src/App.css
@@ -3,38 +3,33 @@ body{
   width: 100vh;
   height: 100vh;
   background-color: plum;
-  
 }
 #root{
   width: 100vw;
   height: 100vh;
 }
-.square{
-  width: 170px;
-  height: 170px;
+.rear{
+  width: 160px;
+  height: 160px;
   border: 4px double black;
   margin: 4px;
   border-radius: 10px;
-
 }
-.div{
-  width: 98vw;
-  height: 98vh;
-  display: flex;
+.cards{
+  width: 94vw;
+  height: 94vh;
   flex-direction: column;
-  align-content: center;
   flex-wrap: wrap;
+ 
+}
+.flex{
+  display: flex;
+  align-content: center;
   justify-content: center;
   align-items: center; 
-  
 }
-
-.sguareFalse{
-  width: 170px;
-  height: 170px;
-  border: 4px double black;
-  margin: 4px;
-  border-radius: 10px;
+.facial{
+  background-image: url(/src/Components/img/волна.jpg);
 }
 img{
   width: 100%;
@@ -47,15 +42,14 @@ img{
   border-radius: 10px ;
   border: 4px double black;
   margin: 4px;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  align-items: center; 
-font-size: 30px;
-  
+font-size: 30px;  
 }
 .rub{
-  background-image: url(/src/Components/img/волна.jpg);
   width: 100%; 
   height: 100%;
+}
+.counter{
+  font-size: 30px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
